tests/syntax_errors/sasha20_2.tl
-- test case 20.
-- Description : Syntax: id after as a function return

-- Expected : '2'
require "ifj21" 
 function me() : write end 
